nerv/main/cluster/apps/coder/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
spec:
  parentRefs:
    - name: internal
      namespace: networking-system
  hostnames:
    - code.nerv.id
  rules:
    - backendRefs:
        - name: coder
          port: 80
